// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PaginationList/FileExecuteMode should match snapshot 1`] = `
<div>
  <div
    class="file-mode-title flex-space-between full-width-element"
  >
    <div
      class="flex-display flex-align-center"
    >
      <svg
        class="custom-icon-ellipse"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#E8F3FF"
          height="16"
          rx="3"
          width="16"
        />
        <circle
          cx="8"
          cy="8"
          fill="#fff"
          r="3"
          stroke="#4583FF"
          stroke-width="2"
        />
      </svg>
      <span
        class="ant-typography file-mode-title-text"
      >
        文件信息概览
      </span>
    </div>
    <button
      class="ant-btn ant-btn-primary basic-button-wrapper css-1uxy5k6"
      type="button"
    >
      <span>
        编辑上线顺序
      </span>
    </button>
  </div>
  <div
    class="ant-list ant-list-vertical ant-list-loading ant-list-something-after-last-item file-execute-mode-list-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          style="min-height: 53px;"
        />
      </div>
    </div>
    <div
      class="ant-list-pagination ant-list-pagination-align-end"
    >
      <ul
        class="ant-pagination task-result-pagination-list"
      >
        <li
          class="ant-pagination-total-text"
        >
          <span>
            共 0 条数据
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="上一页"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-disabled"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="下一页"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-options"
        >
          <div
            aria-label="页码"
            class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow ant-select-show-search"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-label="页码"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  role="combobox"
                  type="search"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="20 条/页"
              >
                20 条/页
              </span>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`test PaginationList/FileExecuteMode should match snapshot 2`] = `
<div>
  <div
    class="file-mode-title flex-space-between full-width-element"
  >
    <div
      class="flex-display flex-align-center"
    >
      <svg
        class="custom-icon-ellipse"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#E8F3FF"
          height="16"
          rx="3"
          width="16"
        />
        <circle
          cx="8"
          cy="8"
          fill="#fff"
          r="3"
          stroke="#4583FF"
          stroke-width="2"
        />
      </svg>
      <span
        class="ant-typography file-mode-title-text"
      >
        文件信息概览
      </span>
    </div>
    <button
      class="ant-btn ant-btn-primary basic-button-wrapper css-1uxy5k6"
      type="button"
    >
      <span>
        编辑上线顺序
      </span>
    </button>
  </div>
  <div
    class="ant-list ant-list-vertical ant-list-something-after-last-item file-execute-mode-list-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1gxdwqg"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              1
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 1024 1024"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M491.354 556.02a80.3 80.3 0 0 0-15.582-20.257 56.6 56.6 0 0 0-19.997-11.168 70.6 70.6 0 0 0-21.815-3.376 60.25 60.25 0 0 0-27.788 7.012 64.4 64.4 0 0 0-19.997 16.361 88.8 88.8 0 0 0-12.985 22.854 82.6 82.6 0 0 0-5.713 25.97 143 143 0 0 0 0 21.815 102.3 102.3 0 0 0 7.271 30.125 85.4 85.4 0 0 0 14.543 23.114 53.5 53.5 0 0 0 20.517 14.024 74 74 0 0 0 29.086 4.934 60.3 60.3 0 0 0 17.14-1.558l16.102-4.675-20.257-19.478 33.761-34.8 12.206 12.986a107 107 0 0 0 3.376-11.687 127 127 0 0 0 1.559-20.776 90.9 90.9 0 0 0-11.687-51.94z"
                                  fill="#4583FF"
                                />
                                <path
                                  d="M743.523 0H213.474a85.44 85.44 0 0 0-85.442 85.442v298.655H42.591A42.59 42.59 0 0 0 0 426.688V790.27a42.85 42.85 0 0 0 42.59 40.773h85.442V937.78a85.18 85.18 0 0 0 85.442 85.182h725.344A85.18 85.18 0 0 0 1024 937.78V282.554zM158.417 732.616a165 165 0 0 1-28.567-3.896 82 82 0 0 1-25.97-10.647 75.6 75.6 0 0 1-22.074-23.114 72.7 72.7 0 0 1-11.947-31.943l-2.856-17.14h51.94a135 135 0 0 0 2.078 14.283 36.36 36.36 0 0 0 8.83 15.063 37.4 37.4 0 0 0 19.737 11.427 119.7 119.7 0 0 0 34.02 2.597 94.8 94.8 0 0 0 25.97-3.896 25.97 25.97 0 0 0 15.583-10.388 29.6 29.6 0 0 0 3.895-16.88 26 26 0 0 0-3.116-11.687 26 26 0 0 0-8.31-8.05 69.3 69.3 0 0 0-14.804-5.974q-9.349-2.856-25.97-6.233l-34.54-6.752c-10.907-2.337-21.036-4.674-30.385-7.271a61.8 61.8 0 0 1-22.334-10.648 43.1 43.1 0 0 1-13.245-15.322 57.1 57.1 0 0 1-6.233-17.14 86.5 86.5 0 0 1 0-18.7 71.16 71.16 0 0 1 12.985-41.551 73.5 73.5 0 0 1 25.97-22.075 119.2 119.2 0 0 1 29.346-10.128 186 186 0 0 1 36.359-3.117 171 171 0 0 1 38.955 4.415 86.2 86.2 0 0 1 28.307 11.947 88.8 88.8 0 0 1 20.776 19.997 46.2 46.2 0 0 1 10.388 21.555l2.337 16.88h-53.238a62 62 0 0 0-5.714-14.024 26 26 0 0 0-8.83-8.57 60.8 60.8 0 0 0-16.62-4.934 194 194 0 0 0-20.776-2.078 103.9 103.9 0 0 0-29.087 3.117 35.06 35.06 0 0 0-19.218 9.609 22.33 22.33 0 0 0-6.232 13.244 19.48 19.48 0 0 0 1.817 11.947 18.96 18.96 0 0 0 8.051 9.349 65.7 65.7 0 0 0 17.4 5.973c8.05 2.078 15.063 3.636 21.296 4.675l28.826 4.674a208 208 0 0 1 32.203 7.791 100 100 0 0 1 28.308 14.284 64.4 64.4 0 0 1 19.477 22.594 69.1 69.1 0 0 1 5.714 34.02 86 86 0 0 1-9.35 36.099 58.95 58.95 0 0 1-19.997 22.594 74 74 0 0 1-25.97 10.648 210.4 210.4 0 0 1-32.462 3.635c-11.427.26-22.075.26-32.723-.26m802.476 206.202a21.295 21.295 0 0 1-21.296 21.296H213.474a22.6 22.6 0 0 1-15.322-6.233 21.56 21.56 0 0 1-6.233-15.063V831.042h639.123a42.59 42.59 0 0 0 42.591-42.59V424.87a42.33 42.33 0 0 0-42.59-40.773H191.918V85.442a21.56 21.56 0 0 1 6.233-15.063 21.56 21.56 0 0 1 15.322-6.493h503.3l8.57 8.83V200.75a97.907 97.907 0 0 0 98.167 97.907h126.474l10.129 10.128zm-400.2-236.328-33.76 34.8-19.737-20.516c-6.753 3.116-15.063 6.493-24.672 10.388a133 133 0 0 1-40.773 6.233 121.3 121.3 0 0 1-55.316-10.128 116.1 116.1 0 0 1-38.436-28.827 113.75 113.75 0 0 1-22.334-41.293 155.8 155.8 0 0 1-7.532-47.785 181.8 181.8 0 0 1 5.454-45.707 122.6 122.6 0 0 1 21.555-43.63 112.45 112.45 0 0 1 37.657-30.644 110.63 110.63 0 0 1 51.94-12.206 115.8 115.8 0 0 1 39.215 5.973 131.4 131.4 0 0 1 36.098 19.218 93.2 93.2 0 0 1 28.048 33.501 170.4 170.4 0 0 1 15.063 43.63 162.83 162.83 0 0 1-8.83 88.558l-5.714 14.283zM799.1 680.935v51.94H597.312v-259.7h49.343v207.76z"
                                  fill="#4583FF"
                                />
                              </svg>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/exec-workflow//task/123/files/538/sqls"
                              >
                                create_table_if_not_exist.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-d31ub5"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-161r05n"
                              >
                                <svg
                                  height="19"
                                  viewBox="0 0 18 19"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
                                    fill="#6094FC"
                                  />
                                </svg>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1h1nm3c"
                              >
                                <svg
                                  fill="none"
                                  height="19"
                                  viewBox="0 0 16 16"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                                    fill="#EBAD1C"
                                  />
                                </svg>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1gxdwqg"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              2
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 1024 1024"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M491.354 556.02a80.3 80.3 0 0 0-15.582-20.257 56.6 56.6 0 0 0-19.997-11.168 70.6 70.6 0 0 0-21.815-3.376 60.25 60.25 0 0 0-27.788 7.012 64.4 64.4 0 0 0-19.997 16.361 88.8 88.8 0 0 0-12.985 22.854 82.6 82.6 0 0 0-5.713 25.97 143 143 0 0 0 0 21.815 102.3 102.3 0 0 0 7.271 30.125 85.4 85.4 0 0 0 14.543 23.114 53.5 53.5 0 0 0 20.517 14.024 74 74 0 0 0 29.086 4.934 60.3 60.3 0 0 0 17.14-1.558l16.102-4.675-20.257-19.478 33.761-34.8 12.206 12.986a107 107 0 0 0 3.376-11.687 127 127 0 0 0 1.559-20.776 90.9 90.9 0 0 0-11.687-51.94z"
                                  fill="#4583FF"
                                />
                                <path
                                  d="M743.523 0H213.474a85.44 85.44 0 0 0-85.442 85.442v298.655H42.591A42.59 42.59 0 0 0 0 426.688V790.27a42.85 42.85 0 0 0 42.59 40.773h85.442V937.78a85.18 85.18 0 0 0 85.442 85.182h725.344A85.18 85.18 0 0 0 1024 937.78V282.554zM158.417 732.616a165 165 0 0 1-28.567-3.896 82 82 0 0 1-25.97-10.647 75.6 75.6 0 0 1-22.074-23.114 72.7 72.7 0 0 1-11.947-31.943l-2.856-17.14h51.94a135 135 0 0 0 2.078 14.283 36.36 36.36 0 0 0 8.83 15.063 37.4 37.4 0 0 0 19.737 11.427 119.7 119.7 0 0 0 34.02 2.597 94.8 94.8 0 0 0 25.97-3.896 25.97 25.97 0 0 0 15.583-10.388 29.6 29.6 0 0 0 3.895-16.88 26 26 0 0 0-3.116-11.687 26 26 0 0 0-8.31-8.05 69.3 69.3 0 0 0-14.804-5.974q-9.349-2.856-25.97-6.233l-34.54-6.752c-10.907-2.337-21.036-4.674-30.385-7.271a61.8 61.8 0 0 1-22.334-10.648 43.1 43.1 0 0 1-13.245-15.322 57.1 57.1 0 0 1-6.233-17.14 86.5 86.5 0 0 1 0-18.7 71.16 71.16 0 0 1 12.985-41.551 73.5 73.5 0 0 1 25.97-22.075 119.2 119.2 0 0 1 29.346-10.128 186 186 0 0 1 36.359-3.117 171 171 0 0 1 38.955 4.415 86.2 86.2 0 0 1 28.307 11.947 88.8 88.8 0 0 1 20.776 19.997 46.2 46.2 0 0 1 10.388 21.555l2.337 16.88h-53.238a62 62 0 0 0-5.714-14.024 26 26 0 0 0-8.83-8.57 60.8 60.8 0 0 0-16.62-4.934 194 194 0 0 0-20.776-2.078 103.9 103.9 0 0 0-29.087 3.117 35.06 35.06 0 0 0-19.218 9.609 22.33 22.33 0 0 0-6.232 13.244 19.48 19.48 0 0 0 1.817 11.947 18.96 18.96 0 0 0 8.051 9.349 65.7 65.7 0 0 0 17.4 5.973c8.05 2.078 15.063 3.636 21.296 4.675l28.826 4.674a208 208 0 0 1 32.203 7.791 100 100 0 0 1 28.308 14.284 64.4 64.4 0 0 1 19.477 22.594 69.1 69.1 0 0 1 5.714 34.02 86 86 0 0 1-9.35 36.099 58.95 58.95 0 0 1-19.997 22.594 74 74 0 0 1-25.97 10.648 210.4 210.4 0 0 1-32.462 3.635c-11.427.26-22.075.26-32.723-.26m802.476 206.202a21.295 21.295 0 0 1-21.296 21.296H213.474a22.6 22.6 0 0 1-15.322-6.233 21.56 21.56 0 0 1-6.233-15.063V831.042h639.123a42.59 42.59 0 0 0 42.591-42.59V424.87a42.33 42.33 0 0 0-42.59-40.773H191.918V85.442a21.56 21.56 0 0 1 6.233-15.063 21.56 21.56 0 0 1 15.322-6.493h503.3l8.57 8.83V200.75a97.907 97.907 0 0 0 98.167 97.907h126.474l10.129 10.128zm-400.2-236.328-33.76 34.8-19.737-20.516c-6.753 3.116-15.063 6.493-24.672 10.388a133 133 0 0 1-40.773 6.233 121.3 121.3 0 0 1-55.316-10.128 116.1 116.1 0 0 1-38.436-28.827 113.75 113.75 0 0 1-22.334-41.293 155.8 155.8 0 0 1-7.532-47.785 181.8 181.8 0 0 1 5.454-45.707 122.6 122.6 0 0 1 21.555-43.63 112.45 112.45 0 0 1 37.657-30.644 110.63 110.63 0 0 1 51.94-12.206 115.8 115.8 0 0 1 39.215 5.973 131.4 131.4 0 0 1 36.098 19.218 93.2 93.2 0 0 1 28.048 33.501 170.4 170.4 0 0 1 15.063 43.63 162.83 162.83 0 0 1-8.83 88.558l-5.714 14.283zM799.1 680.935v51.94H597.312v-259.7h49.343v207.76z"
                                  fill="#4583FF"
                                />
                              </svg>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/exec-workflow//task/123/files/539/sqls"
                              >
                                create_table_roll_back.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-d31ub5"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-161r05n"
                              >
                                <svg
                                  height="19"
                                  viewBox="0 0 18 19"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
                                    fill="#6094FC"
                                  />
                                </svg>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1gxdwqg"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              3
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 1024 1024"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M491.354 556.02a80.3 80.3 0 0 0-15.582-20.257 56.6 56.6 0 0 0-19.997-11.168 70.6 70.6 0 0 0-21.815-3.376 60.25 60.25 0 0 0-27.788 7.012 64.4 64.4 0 0 0-19.997 16.361 88.8 88.8 0 0 0-12.985 22.854 82.6 82.6 0 0 0-5.713 25.97 143 143 0 0 0 0 21.815 102.3 102.3 0 0 0 7.271 30.125 85.4 85.4 0 0 0 14.543 23.114 53.5 53.5 0 0 0 20.517 14.024 74 74 0 0 0 29.086 4.934 60.3 60.3 0 0 0 17.14-1.558l16.102-4.675-20.257-19.478 33.761-34.8 12.206 12.986a107 107 0 0 0 3.376-11.687 127 127 0 0 0 1.559-20.776 90.9 90.9 0 0 0-11.687-51.94z"
                                  fill="#4583FF"
                                />
                                <path
                                  d="M743.523 0H213.474a85.44 85.44 0 0 0-85.442 85.442v298.655H42.591A42.59 42.59 0 0 0 0 426.688V790.27a42.85 42.85 0 0 0 42.59 40.773h85.442V937.78a85.18 85.18 0 0 0 85.442 85.182h725.344A85.18 85.18 0 0 0 1024 937.78V282.554zM158.417 732.616a165 165 0 0 1-28.567-3.896 82 82 0 0 1-25.97-10.647 75.6 75.6 0 0 1-22.074-23.114 72.7 72.7 0 0 1-11.947-31.943l-2.856-17.14h51.94a135 135 0 0 0 2.078 14.283 36.36 36.36 0 0 0 8.83 15.063 37.4 37.4 0 0 0 19.737 11.427 119.7 119.7 0 0 0 34.02 2.597 94.8 94.8 0 0 0 25.97-3.896 25.97 25.97 0 0 0 15.583-10.388 29.6 29.6 0 0 0 3.895-16.88 26 26 0 0 0-3.116-11.687 26 26 0 0 0-8.31-8.05 69.3 69.3 0 0 0-14.804-5.974q-9.349-2.856-25.97-6.233l-34.54-6.752c-10.907-2.337-21.036-4.674-30.385-7.271a61.8 61.8 0 0 1-22.334-10.648 43.1 43.1 0 0 1-13.245-15.322 57.1 57.1 0 0 1-6.233-17.14 86.5 86.5 0 0 1 0-18.7 71.16 71.16 0 0 1 12.985-41.551 73.5 73.5 0 0 1 25.97-22.075 119.2 119.2 0 0 1 29.346-10.128 186 186 0 0 1 36.359-3.117 171 171 0 0 1 38.955 4.415 86.2 86.2 0 0 1 28.307 11.947 88.8 88.8 0 0 1 20.776 19.997 46.2 46.2 0 0 1 10.388 21.555l2.337 16.88h-53.238a62 62 0 0 0-5.714-14.024 26 26 0 0 0-8.83-8.57 60.8 60.8 0 0 0-16.62-4.934 194 194 0 0 0-20.776-2.078 103.9 103.9 0 0 0-29.087 3.117 35.06 35.06 0 0 0-19.218 9.609 22.33 22.33 0 0 0-6.232 13.244 19.48 19.48 0 0 0 1.817 11.947 18.96 18.96 0 0 0 8.051 9.349 65.7 65.7 0 0 0 17.4 5.973c8.05 2.078 15.063 3.636 21.296 4.675l28.826 4.674a208 208 0 0 1 32.203 7.791 100 100 0 0 1 28.308 14.284 64.4 64.4 0 0 1 19.477 22.594 69.1 69.1 0 0 1 5.714 34.02 86 86 0 0 1-9.35 36.099 58.95 58.95 0 0 1-19.997 22.594 74 74 0 0 1-25.97 10.648 210.4 210.4 0 0 1-32.462 3.635c-11.427.26-22.075.26-32.723-.26m802.476 206.202a21.295 21.295 0 0 1-21.296 21.296H213.474a22.6 22.6 0 0 1-15.322-6.233 21.56 21.56 0 0 1-6.233-15.063V831.042h639.123a42.59 42.59 0 0 0 42.591-42.59V424.87a42.33 42.33 0 0 0-42.59-40.773H191.918V85.442a21.56 21.56 0 0 1 6.233-15.063 21.56 21.56 0 0 1 15.322-6.493h503.3l8.57 8.83V200.75a97.907 97.907 0 0 0 98.167 97.907h126.474l10.129 10.128zm-400.2-236.328-33.76 34.8-19.737-20.516c-6.753 3.116-15.063 6.493-24.672 10.388a133 133 0 0 1-40.773 6.233 121.3 121.3 0 0 1-55.316-10.128 116.1 116.1 0 0 1-38.436-28.827 113.75 113.75 0 0 1-22.334-41.293 155.8 155.8 0 0 1-7.532-47.785 181.8 181.8 0 0 1 5.454-45.707 122.6 122.6 0 0 1 21.555-43.63 112.45 112.45 0 0 1 37.657-30.644 110.63 110.63 0 0 1 51.94-12.206 115.8 115.8 0 0 1 39.215 5.973 131.4 131.4 0 0 1 36.098 19.218 93.2 93.2 0 0 1 28.048 33.501 170.4 170.4 0 0 1 15.063 43.63 162.83 162.83 0 0 1-8.83 88.558l-5.714 14.283zM799.1 680.935v51.94H597.312v-259.7h49.343v207.76z"
                                  fill="#4583FF"
                                />
                              </svg>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/exec-workflow//task/123/files/540/sqls"
                              >
                                new_folder/create_table_if_not_exist.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-d31ub5"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-161r05n"
                              >
                                <svg
                                  height="19"
                                  viewBox="0 0 18 19"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
                                    fill="#6094FC"
                                  />
                                </svg>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1h1nm3c"
                              >
                                <svg
                                  fill="none"
                                  height="19"
                                  viewBox="0 0 16 16"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                                    fill="#EBAD1C"
                                  />
                                </svg>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1gxdwqg"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              4
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 1024 1024"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M491.354 556.02a80.3 80.3 0 0 0-15.582-20.257 56.6 56.6 0 0 0-19.997-11.168 70.6 70.6 0 0 0-21.815-3.376 60.25 60.25 0 0 0-27.788 7.012 64.4 64.4 0 0 0-19.997 16.361 88.8 88.8 0 0 0-12.985 22.854 82.6 82.6 0 0 0-5.713 25.97 143 143 0 0 0 0 21.815 102.3 102.3 0 0 0 7.271 30.125 85.4 85.4 0 0 0 14.543 23.114 53.5 53.5 0 0 0 20.517 14.024 74 74 0 0 0 29.086 4.934 60.3 60.3 0 0 0 17.14-1.558l16.102-4.675-20.257-19.478 33.761-34.8 12.206 12.986a107 107 0 0 0 3.376-11.687 127 127 0 0 0 1.559-20.776 90.9 90.9 0 0 0-11.687-51.94z"
                                  fill="#4583FF"
                                />
                                <path
                                  d="M743.523 0H213.474a85.44 85.44 0 0 0-85.442 85.442v298.655H42.591A42.59 42.59 0 0 0 0 426.688V790.27a42.85 42.85 0 0 0 42.59 40.773h85.442V937.78a85.18 85.18 0 0 0 85.442 85.182h725.344A85.18 85.18 0 0 0 1024 937.78V282.554zM158.417 732.616a165 165 0 0 1-28.567-3.896 82 82 0 0 1-25.97-10.647 75.6 75.6 0 0 1-22.074-23.114 72.7 72.7 0 0 1-11.947-31.943l-2.856-17.14h51.94a135 135 0 0 0 2.078 14.283 36.36 36.36 0 0 0 8.83 15.063 37.4 37.4 0 0 0 19.737 11.427 119.7 119.7 0 0 0 34.02 2.597 94.8 94.8 0 0 0 25.97-3.896 25.97 25.97 0 0 0 15.583-10.388 29.6 29.6 0 0 0 3.895-16.88 26 26 0 0 0-3.116-11.687 26 26 0 0 0-8.31-8.05 69.3 69.3 0 0 0-14.804-5.974q-9.349-2.856-25.97-6.233l-34.54-6.752c-10.907-2.337-21.036-4.674-30.385-7.271a61.8 61.8 0 0 1-22.334-10.648 43.1 43.1 0 0 1-13.245-15.322 57.1 57.1 0 0 1-6.233-17.14 86.5 86.5 0 0 1 0-18.7 71.16 71.16 0 0 1 12.985-41.551 73.5 73.5 0 0 1 25.97-22.075 119.2 119.2 0 0 1 29.346-10.128 186 186 0 0 1 36.359-3.117 171 171 0 0 1 38.955 4.415 86.2 86.2 0 0 1 28.307 11.947 88.8 88.8 0 0 1 20.776 19.997 46.2 46.2 0 0 1 10.388 21.555l2.337 16.88h-53.238a62 62 0 0 0-5.714-14.024 26 26 0 0 0-8.83-8.57 60.8 60.8 0 0 0-16.62-4.934 194 194 0 0 0-20.776-2.078 103.9 103.9 0 0 0-29.087 3.117 35.06 35.06 0 0 0-19.218 9.609 22.33 22.33 0 0 0-6.232 13.244 19.48 19.48 0 0 0 1.817 11.947 18.96 18.96 0 0 0 8.051 9.349 65.7 65.7 0 0 0 17.4 5.973c8.05 2.078 15.063 3.636 21.296 4.675l28.826 4.674a208 208 0 0 1 32.203 7.791 100 100 0 0 1 28.308 14.284 64.4 64.4 0 0 1 19.477 22.594 69.1 69.1 0 0 1 5.714 34.02 86 86 0 0 1-9.35 36.099 58.95 58.95 0 0 1-19.997 22.594 74 74 0 0 1-25.97 10.648 210.4 210.4 0 0 1-32.462 3.635c-11.427.26-22.075.26-32.723-.26m802.476 206.202a21.295 21.295 0 0 1-21.296 21.296H213.474a22.6 22.6 0 0 1-15.322-6.233 21.56 21.56 0 0 1-6.233-15.063V831.042h639.123a42.59 42.59 0 0 0 42.591-42.59V424.87a42.33 42.33 0 0 0-42.59-40.773H191.918V85.442a21.56 21.56 0 0 1 6.233-15.063 21.56 21.56 0 0 1 15.322-6.493h503.3l8.57 8.83V200.75a97.907 97.907 0 0 0 98.167 97.907h126.474l10.129 10.128zm-400.2-236.328-33.76 34.8-19.737-20.516c-6.753 3.116-15.063 6.493-24.672 10.388a133 133 0 0 1-40.773 6.233 121.3 121.3 0 0 1-55.316-10.128 116.1 116.1 0 0 1-38.436-28.827 113.75 113.75 0 0 1-22.334-41.293 155.8 155.8 0 0 1-7.532-47.785 181.8 181.8 0 0 1 5.454-45.707 122.6 122.6 0 0 1 21.555-43.63 112.45 112.45 0 0 1 37.657-30.644 110.63 110.63 0 0 1 51.94-12.206 115.8 115.8 0 0 1 39.215 5.973 131.4 131.4 0 0 1 36.098 19.218 93.2 93.2 0 0 1 28.048 33.501 170.4 170.4 0 0 1 15.063 43.63 162.83 162.83 0 0 1-8.83 88.558l-5.714 14.283zM799.1 680.935v51.94H597.312v-259.7h49.343v207.76z"
                                  fill="#4583FF"
                                />
                              </svg>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/exec-workflow//task/123/files/541/sqls"
                              >
                                new_folder/create_table_roll_back.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-d31ub5"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-161r05n"
                              >
                                <svg
                                  height="19"
                                  viewBox="0 0 18 19"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
                                    fill="#6094FC"
                                  />
                                </svg>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1gxdwqg"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              5
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 1024 1024"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M491.354 556.02a80.3 80.3 0 0 0-15.582-20.257 56.6 56.6 0 0 0-19.997-11.168 70.6 70.6 0 0 0-21.815-3.376 60.25 60.25 0 0 0-27.788 7.012 64.4 64.4 0 0 0-19.997 16.361 88.8 88.8 0 0 0-12.985 22.854 82.6 82.6 0 0 0-5.713 25.97 143 143 0 0 0 0 21.815 102.3 102.3 0 0 0 7.271 30.125 85.4 85.4 0 0 0 14.543 23.114 53.5 53.5 0 0 0 20.517 14.024 74 74 0 0 0 29.086 4.934 60.3 60.3 0 0 0 17.14-1.558l16.102-4.675-20.257-19.478 33.761-34.8 12.206 12.986a107 107 0 0 0 3.376-11.687 127 127 0 0 0 1.559-20.776 90.9 90.9 0 0 0-11.687-51.94z"
                                  fill="#4583FF"
                                />
                                <path
                                  d="M743.523 0H213.474a85.44 85.44 0 0 0-85.442 85.442v298.655H42.591A42.59 42.59 0 0 0 0 426.688V790.27a42.85 42.85 0 0 0 42.59 40.773h85.442V937.78a85.18 85.18 0 0 0 85.442 85.182h725.344A85.18 85.18 0 0 0 1024 937.78V282.554zM158.417 732.616a165 165 0 0 1-28.567-3.896 82 82 0 0 1-25.97-10.647 75.6 75.6 0 0 1-22.074-23.114 72.7 72.7 0 0 1-11.947-31.943l-2.856-17.14h51.94a135 135 0 0 0 2.078 14.283 36.36 36.36 0 0 0 8.83 15.063 37.4 37.4 0 0 0 19.737 11.427 119.7 119.7 0 0 0 34.02 2.597 94.8 94.8 0 0 0 25.97-3.896 25.97 25.97 0 0 0 15.583-10.388 29.6 29.6 0 0 0 3.895-16.88 26 26 0 0 0-3.116-11.687 26 26 0 0 0-8.31-8.05 69.3 69.3 0 0 0-14.804-5.974q-9.349-2.856-25.97-6.233l-34.54-6.752c-10.907-2.337-21.036-4.674-30.385-7.271a61.8 61.8 0 0 1-22.334-10.648 43.1 43.1 0 0 1-13.245-15.322 57.1 57.1 0 0 1-6.233-17.14 86.5 86.5 0 0 1 0-18.7 71.16 71.16 0 0 1 12.985-41.551 73.5 73.5 0 0 1 25.97-22.075 119.2 119.2 0 0 1 29.346-10.128 186 186 0 0 1 36.359-3.117 171 171 0 0 1 38.955 4.415 86.2 86.2 0 0 1 28.307 11.947 88.8 88.8 0 0 1 20.776 19.997 46.2 46.2 0 0 1 10.388 21.555l2.337 16.88h-53.238a62 62 0 0 0-5.714-14.024 26 26 0 0 0-8.83-8.57 60.8 60.8 0 0 0-16.62-4.934 194 194 0 0 0-20.776-2.078 103.9 103.9 0 0 0-29.087 3.117 35.06 35.06 0 0 0-19.218 9.609 22.33 22.33 0 0 0-6.232 13.244 19.48 19.48 0 0 0 1.817 11.947 18.96 18.96 0 0 0 8.051 9.349 65.7 65.7 0 0 0 17.4 5.973c8.05 2.078 15.063 3.636 21.296 4.675l28.826 4.674a208 208 0 0 1 32.203 7.791 100 100 0 0 1 28.308 14.284 64.4 64.4 0 0 1 19.477 22.594 69.1 69.1 0 0 1 5.714 34.02 86 86 0 0 1-9.35 36.099 58.95 58.95 0 0 1-19.997 22.594 74 74 0 0 1-25.97 10.648 210.4 210.4 0 0 1-32.462 3.635c-11.427.26-22.075.26-32.723-.26m802.476 206.202a21.295 21.295 0 0 1-21.296 21.296H213.474a22.6 22.6 0 0 1-15.322-6.233 21.56 21.56 0 0 1-6.233-15.063V831.042h639.123a42.59 42.59 0 0 0 42.591-42.59V424.87a42.33 42.33 0 0 0-42.59-40.773H191.918V85.442a21.56 21.56 0 0 1 6.233-15.063 21.56 21.56 0 0 1 15.322-6.493h503.3l8.57 8.83V200.75a97.907 97.907 0 0 0 98.167 97.907h126.474l10.129 10.128zm-400.2-236.328-33.76 34.8-19.737-20.516c-6.753 3.116-15.063 6.493-24.672 10.388a133 133 0 0 1-40.773 6.233 121.3 121.3 0 0 1-55.316-10.128 116.1 116.1 0 0 1-38.436-28.827 113.75 113.75 0 0 1-22.334-41.293 155.8 155.8 0 0 1-7.532-47.785 181.8 181.8 0 0 1 5.454-45.707 122.6 122.6 0 0 1 21.555-43.63 112.45 112.45 0 0 1 37.657-30.644 110.63 110.63 0 0 1 51.94-12.206 115.8 115.8 0 0 1 39.215 5.973 131.4 131.4 0 0 1 36.098 19.218 93.2 93.2 0 0 1 28.048 33.501 170.4 170.4 0 0 1 15.063 43.63 162.83 162.83 0 0 1-8.83 88.558l-5.714 14.283zM799.1 680.935v51.94H597.312v-259.7h49.343v207.76z"
                                  fill="#4583FF"
                                />
                              </svg>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/exec-workflow//task/123/files/542/sqls"
                              >
                                new_folder/in_folder/create_table_if_not_exist.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-d31ub5"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-161r05n"
                              >
                                <svg
                                  height="19"
                                  viewBox="0 0 18 19"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
                                    fill="#6094FC"
                                  />
                                </svg>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1h1nm3c"
                              >
                                <svg
                                  fill="none"
                                  height="19"
                                  viewBox="0 0 16 16"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                                    fill="#EBAD1C"
                                  />
                                </svg>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1gxdwqg"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              6
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 1024 1024"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M491.354 556.02a80.3 80.3 0 0 0-15.582-20.257 56.6 56.6 0 0 0-19.997-11.168 70.6 70.6 0 0 0-21.815-3.376 60.25 60.25 0 0 0-27.788 7.012 64.4 64.4 0 0 0-19.997 16.361 88.8 88.8 0 0 0-12.985 22.854 82.6 82.6 0 0 0-5.713 25.97 143 143 0 0 0 0 21.815 102.3 102.3 0 0 0 7.271 30.125 85.4 85.4 0 0 0 14.543 23.114 53.5 53.5 0 0 0 20.517 14.024 74 74 0 0 0 29.086 4.934 60.3 60.3 0 0 0 17.14-1.558l16.102-4.675-20.257-19.478 33.761-34.8 12.206 12.986a107 107 0 0 0 3.376-11.687 127 127 0 0 0 1.559-20.776 90.9 90.9 0 0 0-11.687-51.94z"
                                  fill="#4583FF"
                                />
                                <path
                                  d="M743.523 0H213.474a85.44 85.44 0 0 0-85.442 85.442v298.655H42.591A42.59 42.59 0 0 0 0 426.688V790.27a42.85 42.85 0 0 0 42.59 40.773h85.442V937.78a85.18 85.18 0 0 0 85.442 85.182h725.344A85.18 85.18 0 0 0 1024 937.78V282.554zM158.417 732.616a165 165 0 0 1-28.567-3.896 82 82 0 0 1-25.97-10.647 75.6 75.6 0 0 1-22.074-23.114 72.7 72.7 0 0 1-11.947-31.943l-2.856-17.14h51.94a135 135 0 0 0 2.078 14.283 36.36 36.36 0 0 0 8.83 15.063 37.4 37.4 0 0 0 19.737 11.427 119.7 119.7 0 0 0 34.02 2.597 94.8 94.8 0 0 0 25.97-3.896 25.97 25.97 0 0 0 15.583-10.388 29.6 29.6 0 0 0 3.895-16.88 26 26 0 0 0-3.116-11.687 26 26 0 0 0-8.31-8.05 69.3 69.3 0 0 0-14.804-5.974q-9.349-2.856-25.97-6.233l-34.54-6.752c-10.907-2.337-21.036-4.674-30.385-7.271a61.8 61.8 0 0 1-22.334-10.648 43.1 43.1 0 0 1-13.245-15.322 57.1 57.1 0 0 1-6.233-17.14 86.5 86.5 0 0 1 0-18.7 71.16 71.16 0 0 1 12.985-41.551 73.5 73.5 0 0 1 25.97-22.075 119.2 119.2 0 0 1 29.346-10.128 186 186 0 0 1 36.359-3.117 171 171 0 0 1 38.955 4.415 86.2 86.2 0 0 1 28.307 11.947 88.8 88.8 0 0 1 20.776 19.997 46.2 46.2 0 0 1 10.388 21.555l2.337 16.88h-53.238a62 62 0 0 0-5.714-14.024 26 26 0 0 0-8.83-8.57 60.8 60.8 0 0 0-16.62-4.934 194 194 0 0 0-20.776-2.078 103.9 103.9 0 0 0-29.087 3.117 35.06 35.06 0 0 0-19.218 9.609 22.33 22.33 0 0 0-6.232 13.244 19.48 19.48 0 0 0 1.817 11.947 18.96 18.96 0 0 0 8.051 9.349 65.7 65.7 0 0 0 17.4 5.973c8.05 2.078 15.063 3.636 21.296 4.675l28.826 4.674a208 208 0 0 1 32.203 7.791 100 100 0 0 1 28.308 14.284 64.4 64.4 0 0 1 19.477 22.594 69.1 69.1 0 0 1 5.714 34.02 86 86 0 0 1-9.35 36.099 58.95 58.95 0 0 1-19.997 22.594 74 74 0 0 1-25.97 10.648 210.4 210.4 0 0 1-32.462 3.635c-11.427.26-22.075.26-32.723-.26m802.476 206.202a21.295 21.295 0 0 1-21.296 21.296H213.474a22.6 22.6 0 0 1-15.322-6.233 21.56 21.56 0 0 1-6.233-15.063V831.042h639.123a42.59 42.59 0 0 0 42.591-42.59V424.87a42.33 42.33 0 0 0-42.59-40.773H191.918V85.442a21.56 21.56 0 0 1 6.233-15.063 21.56 21.56 0 0 1 15.322-6.493h503.3l8.57 8.83V200.75a97.907 97.907 0 0 0 98.167 97.907h126.474l10.129 10.128zm-400.2-236.328-33.76 34.8-19.737-20.516c-6.753 3.116-15.063 6.493-24.672 10.388a133 133 0 0 1-40.773 6.233 121.3 121.3 0 0 1-55.316-10.128 116.1 116.1 0 0 1-38.436-28.827 113.75 113.75 0 0 1-22.334-41.293 155.8 155.8 0 0 1-7.532-47.785 181.8 181.8 0 0 1 5.454-45.707 122.6 122.6 0 0 1 21.555-43.63 112.45 112.45 0 0 1 37.657-30.644 110.63 110.63 0 0 1 51.94-12.206 115.8 115.8 0 0 1 39.215 5.973 131.4 131.4 0 0 1 36.098 19.218 93.2 93.2 0 0 1 28.048 33.501 170.4 170.4 0 0 1 15.063 43.63 162.83 162.83 0 0 1-8.83 88.558l-5.714 14.283zM799.1 680.935v51.94H597.312v-259.7h49.343v207.76z"
                                  fill="#4583FF"
                                />
                              </svg>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/exec-workflow//task/123/files/543/sqls"
                              >
                                new_folder/in_folder/create_table_roll_back.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-d31ub5"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-161r05n"
                              >
                                <svg
                                  height="19"
                                  viewBox="0 0 18 19"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
                                    fill="#6094FC"
                                  />
                                </svg>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-pagination ant-list-pagination-align-end"
    >
      <ul
        class="ant-pagination task-result-pagination-list"
      >
        <li
          class="ant-pagination-total-text"
        >
          <span>
            共 6 条数据
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="上一页"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="下一页"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-options"
        >
          <div
            aria-label="页码"
            class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow ant-select-show-search"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-label="页码"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  role="combobox"
                  type="search"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="20 条/页"
              >
                20 条/页
              </span>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
